// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - CustomRadioButtonGroup renders correctly 1`] = `
<div
  className="StyledBox-sc-13pk1d4-0 cktZMM"
>
  <input
    className="sc-bdVaJa gSiMpJ"
    id="test1"
    name="test"
    type="radio"
    value="test"
  />
  <label
    className="sc-htpNat dkbVkt"
    htmlFor="test1"
  >
    label-test
  </label>
  <input
    className="sc-bdVaJa gSiMpJ"
    id="test2"
    name="test"
    type="radio"
    value="test"
  />
  <label
    className="sc-htpNat dkbVkt"
    htmlFor="test2"
  >
    label-test
  </label>
</div>
`;

exports[`COMPONENT - CustomRadioButtonGroup renders correctly with icon 1`] = `
<div
  className="StyledBox-sc-13pk1d4-0 cktZMM"
>
  <input
    className="sc-bdVaJa gSiMpJ"
    id="test1"
    name="test"
    type="radio"
    value="test"
  />
  <label
    className="sc-bwzfXH bKRWOi"
    htmlFor="test1"
  >
    label-test
  </label>
  <input
    className="sc-bdVaJa gSiMpJ"
    id="test2"
    name="test"
    type="radio"
    value="test"
  />
  <label
    className="sc-bwzfXH bKRWOi"
    htmlFor="test2"
  >
    label-test
  </label>
</div>
`;
